Improve alignment of navbar brand and fix up left padding on list groups
BS3 commit b0e943399df374b03f9ed5f676f33e42f5e53a74

--- a/docs/assets/css/todc-bootstrap.css
+++ b/docs/assets/css/todc-bootstrap.css
@@ -3421,7 +3421,6 @@ li.list-group-header {
     float: left;
     padding-top: 12px;
     padding-bottom: 12px;
-    margin-left: -10px;
   }
   .navbar-masthead .nav {
     float: left;
@@ -3460,7 +3459,6 @@ li.list-group-header {
     float: left;
     padding-top: 8px;
     padding-bottom: 8px;
-    margin-left: -10px;
   }
   .navbar-toolbar .nav {
     float: left;
