--- a/less/navbar.less
+++ b/less/navbar.less
@@ -927,7 +927,6 @@
     float: left;
     padding-top: (floor((@navbar-masthead-height - @line-height-computed) / 2));
     padding-bottom: (floor((@navbar-masthead-height - @line-height-computed) / 2));
-    margin-left: -10px;
   }
   .navbar-masthead .nav {
     float: left;
@@ -984,7 +983,6 @@
     float: left;
     padding-top: (floor((@navbar-toolbar-height - @line-height-computed) / 2));
     padding-bottom: (floor((@navbar-toolbar-height - @line-height-computed) / 2));
-    margin-left: -10px;
   }
   .navbar-toolbar .nav {
     float: left;
